[gd_scene load_steps=6 format=3 uid="uid://cnf5y2lacj7mk"]

[ext_resource type="Script" uid="uid://c5tv4u086x7fd" path="res://main_menu.gd" id="1_yxufh"]
[ext_resource type="Texture2D" uid="uid://xa6essads2em" path="res://mainmenu/assets/mainMenueItems/main_menue.png" id="2_7at75"]
[ext_resource type="Texture2D" uid="uid://6txk2r43ker5" path="res://mainmenu/assets/mainMenueItems/start_button.png" id="3_yylb4"]
[ext_resource type="Texture2D" uid="uid://dw6c0yswnvp3w" path="res://mainmenu/assets/mainMenueItems/credits_button.png" id="4_la1qf"]
[ext_resource type="Texture2D" uid="uid://qke27c0g7h7x" path="res://mainmenu/assets/mainMenueItems/exit_button.png" id="5_ni4cm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxufh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7at75")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 383.0
offset_right = 588.0
offset_bottom = 511.0
scale = Vector2(2.99065, 1.85981)

[node name="PlayButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("3_yylb4")
flat = true

[node name="CreditButtons" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("4_la1qf")
flat = true

[node name="ExitButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("5_ni4cm")
flat = true

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 895.0
offset_top = 404.0
offset_right = 963.0
offset_bottom = 435.0
text = "DEBUG! PLAYGROUND!"

[node name="Credits" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 540.0
offset_top = 562.0
offset_right = 601.0
offset_bottom = 593.0
text = "Return"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButtons" to="." method="_on_credit_buttons_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Credits/ReturnButton" to="." method="_on_return_button_pressed"]
